# credit-contract-backend

./: .coveragerc  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  run.sh
config/: pagination.py  settings.py  urls.py
contracts/: apps.py  urls.py
contracts/filters/: __init__.py  contract_filters.py
contracts/migrations/: 0001_initial.py
contracts/models/: __init__.py  address.py  base.py  contract.py  installment.py
contracts/serializers/: __init__.py  address.py  contract.py  installment.py  summary.py
contracts/services/: contract_service.py  summary_service.py
contracts/validators/: cpf.py  phone.py
contracts/views/: contract_viewset.py  summary_view.py
